# Jobeasy

./: .dockerignore  .env.example  .gitignore  Dockerfile  GMAIL_OAUTH_SETUP.md  PLAYWRIGHT_README.md  README.md  STRIPE_LIVE_MODE_SETUP.md  entrypoint.sh  example_playwright.py  manage.py  playwright.config.py  pyproject.toml  run_tests.py  setup_railway_redis.md  temp_resume.txt  test_resume_pdf_integration.py  test_runner.py  test_schema.py  test_standalone_pdf_generator.py  websocket_connection_path.md
ai_service/: README.md  __init__.py  admin.py  admin_resume_pdf.py  ai_resume_assistant.py  ai_test_resume_assistant.py  apps.py  cover_letter.py  cover_letter_prompts.py  dashboard_job_fit.py  dashboard_why_should_i_apply.py  deepseek_client.py  eval_prompts.py  eval_schema.py  example_event_driven_usage.py  example_usage.py  fit_gate.py  forms.py  function_handlers.py  gemini_client.py  gemini_schema.py  gemini_service.py  generation_config.py  interview_coach_manager.py  job_fit_settings.py  json_repair.py  models.py  open_ai.py  open_ai_assistant_with_rag_and_function_call.py  platform_version.py  professional_summary.py  professional_summary_prompts.py  prompt_formatting.py  prompt_utils.py  resume_job_evaluation.py  resume_optimization.py  resume_optimization_prompts.py  resume_optimization_validate.py  structured_resume.py  task_schema.py  (+4 more)
authentication/: README.md  forms.py  urls.py  views.py
blog/: API_CONTRACT.md  admin.py  media_cleanup.py  models.py  page_views.py  serializers.py  signals.py  storage.py  tests.py  tests_media_storage.py  urls.py  utils.py  views.py
coverletter/: README.md  cover_letter.py  models.py  urls.py  views.py
dashboard/: models.py  tests.py  urls.py  views.py
docs/: INTERNAL_TECHNICAL_OVERVIEW.md  JOBEAS_FAQ.md  JOBEAS_KNOWLEDGE_BASE.md
email_utility/: admin.py  apps.py  base.py  email_config.py  email_test.py  models.py  test.py  test_sendgrid.py  urls.py  views.py
home/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
job_service/: README.md  admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+444 files in other folders)
