[tool.poetry]
name = "jobeas"
version = "0.1.0"
description = ""
authors = ["engrjoel <esaatechnolgy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.3"
openai = "^1.88.0"
dotenv = "^0.9.9"
pdfplumber = "^0.11.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
