[tool.poetry]
name = "jobeas"
version = "0.1.0"
description = ""
authors = ["engrjoel <esaatechnolgy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.3"
openai = "^1.88.0"
dotenv = "^0.9.9"
pdfplumber = "^0.11.7"
django-mailbox = "^4.10.1"
pypdf2 = "^3.0.1"
python-docx = "^1.2.0"
reportlab = "^4.4.2"
playwright = "^1.52.0"

[tool.poetry.scripts]
test = "test_runner:main"
test-headed = "test_runner:main"
test-ui = "run_tests:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
