[tool.poetry]
name = "jobeas"
version = "0.1.0"
description = ""
authors = ["engrjoel <esaatechnolgy@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.2.3"
openai = "^1.96.0"
dotenv = "^0.9.9"
pdfplumber = "^0.11.7"
django-mailbox = "^4.10.1"
pypdf2 = "^3.0.1"
python-docx = "^1.2.0"
reportlab = "^4.4.2"
playwright = "^1.52.0"
gunicorn = "^21.2.0"
uvicorn = {extras = ["standard"], version = "^0.32.1"}
channels = "^4.0.0"
channels-redis = "^4.1.0"
aioredis = "^2.0.1"
whitenoise = "^6.6.0"
django-ckeditor-5 = "^0.2.18"
djangorestframework = "^3.16.0"
stripe = "^12.3.0"
dj-database-url = "^3.0.1"
python-decouple = "^3.8"
psycopg2-binary = "^2.9.10"
sendgrid = "^6.11.0"
google-auth = "^2.40.3"
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.177.0"

[tool.poetry.scripts]
test = "test_runner:main"
test-headed = "test_runner:main"
test-ui = "run_tests:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
